k8s-jenkins-sonar-nexus/ansible/roles/sonar/files/dep-psql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: sonar
  labels:
    db: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      db: postgresql
  template:
    metadata:
      labels:
        db: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres
        ports:
        - name: postgresql-port
          containerPort: 5432
        volumeMounts:
        - name: postgresql-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: postgresql-pvc
