k8s-jenkins-sonar-nexus/ansible/roles/sonar/files/dep-sonar-hostpath.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-deployment
  namespace: sonar
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:7.1
        ports:
        - name: sonarqube-port
          containerPort: 9000
        volumeMounts:
        - name: sonarqube-conf
          mountPath: /opt/sonarqube/conf
        - name: sonarqube-extensions
          mountPath: /opt/sonarqube/extensions
        - name: sonarqube-logs
          mountPath: /opt/sonarqube/logs
        - name: sonarqube-data
          mountPath: /opt/sonarqube/data
#          mountPath: /opt/sonarqube
      volumes:
      - name: sonarqube-conf
        hostPath:
          path: /opt/sonarqube/conf
      - name: sonarqube-extensions
        hostPath:
          path: /opt/sonarqube/extensions
      - name: sonarqube-logs
        hostPath:
          path: /opt/sonarqube/logs
      - name: sonarqube-data
        hostPath:
          path: /opt/sonarqube/data
