k8s-jenkins-sonar-nexus/ansible/roles/sonar/files/svc-psql.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: sonar
  labels:
    db: postgresql
spec:
  selector:
    db: postgresql
  type: ClusterIP
  ports:
  - name: postgresql-svc
    protocol: TCP
    port: 5432
    targetPort: postgresql-port
