k8s-jenkins-sonar-nexus/ansible/roles/sonar/files/svc-sonar.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: sonar
  labels:
    app: sonarqube
spec:
  selector:
    app: sonarqube
  type: ClusterIP
  ports:
  - name: sonarqube-svc
    protocol: TCP
    port: 80
    targetPort: sonarqube-port
