k8s-jenkins-sonar-nexus/ansible/roles/sonar/files/ing-sonar.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonar
spec:
  rules:
  - host: sonar
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarqube-service
          servicePort: sonarqube-svc
